argocd/it-tools/manifests/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: it-tools
  name: it-tools
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: it-tools
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
        - image: harbor.yanello.net/ghcr/corentinth/it-tools:2024.10.22-7ca5933@sha256:8b8128748339583ca951af03dfe02a9a4d7363f61a216226fc28030731a5a61f
          imagePullPolicy: IfNotPresent
          name: it-tools
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
