argocd/it-tools/manifests/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: it-tools
  name: it-tools
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: it-tools
